made some changes to make the site responsive on mobile by removing the fixed widths I had added

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
 .text {
     align-items: center;
     flex-wrap: wrap;
+    max-width: 450px;
+    padding-left: 10px;
 }
 .large-text {
     flex-wrap: wrap;
@@ -27,22 +29,22 @@ body {
     font-weight: 700;
     font-size: 60px;
     margin-top: 210px;
-    width: 450px;
+   ;
     color: white;
 
 }
 .smaller-text {
     flex-wrap: wrap;
-    flex: 1;
+   
     color: whitesmoke;
     margin-top: 20px;
-    width: 500px;
+    
     font-size: 20px;
 
 }
 .form-header {
     flex-wrap: wrap;
-    flex: 1;
+    
     margin-top: 160px;
     margin-bottom: 25px;
     border: 2px solid hsl(248, 32%, 49%);
@@ -52,59 +54,86 @@ body {
     border-radius: 7px;
     box-shadow:0px 5px 2px black;
     color: white;
+    max-width: 400px;
+    text-align: center;
+    margin-left: 20px;
+    padding-left: 60px;
+    padding-right: 53px;
+
 
 }
 .form {
     flex-wrap: wrap;
     flex: 1;
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 7px;
+    max-width: 400px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 #first-name {
     margin-bottom: 30px;
     font-size: 16px;
-    width: 400px;
+    
     height: 50px;
     border-radius: 5px;
     padding-left: 25px;
+    flex-wrap: wrap;
+    flex: 1;
+    padding-right: 100px;
 
 }
 #last-name {
     margin-bottom: 30px;
     font-size: 16px;
-    width: 400px;
+
     height: 50px;
     border-radius: 5px;
     padding-left: 25px;
+    flex-wrap: wrap;
+    flex: 1;
+    padding-right: 100px;
 
 }
 #email {
     margin-bottom: 30px;
     font-size: 16px;
-    width: 400px;
+    
     height: 50px;
     border-radius: 5px;
     padding-left: 25px;
+    flex-wrap: wrap;
+    flex: 1;
+    padding-right: 100px;
 
 }
 #password {
     margin-bottom: 30px;
     font-size: 16px;
-    width: 400px;
+    
     height: 50px;
     border-radius: 5px;
     padding-left: 25px;
+    flex-wrap: wrap;
+    flex: 1;
+    padding-right: 100px;
 
 }
 #btn {
     background-color: hsl(154, 59%, 51%);
     padding: 10px;
     text-align: center;
-    width: 400px;
+    
     border-radius: 5px;
     font-size: 16px;
     margin-bottom: 15px;
+    flex-wrap: wrap;
+    flex: 1;
+    padding-left: 95px;
+    padding-right: 95px;
+    text-align: center;
+    
 }
 .terms {
     color: hsl(246, 25%, 77%);
@@ -117,4 +146,4 @@ body {
 footer {
     margin-top: 50px;
     font-size: 86px;
-}
+}max-width: 400px;
